# AMD-SlingShot-Hackathon

./: .gitignore  CHANGES.md  README.md  capture_ui.mjs  cleanup_log.md  config.py  continual_scheduler.py  demo_run.py  implementation_plan.md.resolved  interactive_config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_pipeline.py  smoke_output.txt  smoke_test.py  sweep.py  test_backend_sockets.py  test_backend_sockets2.py  update_imports.py
agents/: REWARD_TUNING.md  __init__.py  dqn_agent.py
app/: dashboard.py
backend/: README.md  main.py  readme_generator.py  simulation_runner.py
baselines/: README.md  greedy_baseline.py  hybrid_baseline.py  skill_baseline.py  stf_baseline.py
checkpoints/: best_model.pth  checkpoint_ep100.pth  checkpoint_ep1000.pth  checkpoint_ep1100.pth  checkpoint_ep1200.pth  checkpoint_ep1300.pth  checkpoint_ep1400.pth  checkpoint_ep150.pth  checkpoint_ep1500.pth  checkpoint_ep1600.pth  checkpoint_ep1700.pth  checkpoint_ep1800.pth  checkpoint_ep1900.pth  checkpoint_ep200.pth  checkpoint_ep2000.pth  checkpoint_ep2100.pth  checkpoint_ep2200.pth  checkpoint_ep2300.pth  checkpoint_ep2400.pth  checkpoint_ep2500.pth  checkpoint_ep2600.pth  checkpoint_ep300.pth  checkpoint_ep400.pth  checkpoint_ep50.pth  checkpoint_ep500.pth  checkpoint_ep600.pth  checkpoint_ep700.pth  checkpoint_ep800.pth  checkpoint_ep900.pth
docs/: HOW_TO_RUN.md  ONLINE_LEARNING.md  README.md  RL_THEORY.md
environment/: README.md  project_env.py  task.py  worker.py
evaluation/: README.md  compare_phases.py  evaluate_agent.py  statistical_tests.py
frontend/: README.md  (+4 more)
(+92 files in other folders)
