[project]
name = "amd-slingshot-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "matplotlib>=3.5.0",
    "mcp[cli]>=1.26.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.7.0",
    "sqlalchemy>=2.0.46",
    "stable-baselines3>=2.7.1",
    "starlette>=0.52.1",
    "streamlit>=1.54.0",
    "torch>=1.10.0",
    "uvicorn>=0.40.0",
]
